[gd_scene load_steps=8 format=3 uid="uid://ceosp2ukuwp0i"]

[ext_resource type="Script" path="res://game.gd" id="1_g5fwx"]
[ext_resource type="PackedScene" uid="uid://ceg35vu50l2ru" path="res://player.tscn" id="1_lb2r1"]
[ext_resource type="PackedScene" uid="uid://o0yse0jrby8x" path="res://StageChangeTimer.tscn" id="3_j25h7"]
[ext_resource type="PackedScene" uid="uid://cvg3b7ws2mpny" path="res://start_screen.tscn" id="4_12a7g"]
[ext_resource type="PackedScene" uid="uid://dcc5nlhjg6mnh" path="res://coin.tscn" id="6_5v5ho"]

[sub_resource type="SystemFont" id="SystemFont_ignfl"]

[sub_resource type="LabelSettings" id="LabelSettings_y7m0e"]
font = SubResource("SystemFont_ignfl")

[node name="Game" type="Node"]
script = ExtResource("1_g5fwx")

[node name="Timer" parent="." instance=ExtResource("3_j25h7")]

[node name="Stages" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_lb2r1")]
position = Vector2(564, 343)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 1031.0
offset_top = 46.0
offset_right = 1093.0
offset_bottom = 80.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="CoinCount" type="Label" parent="ColorRect"]
layout_mode = 0
offset_top = 4.0
offset_right = 56.0
offset_bottom = 30.0
text = "0"
label_settings = SubResource("LabelSettings_y7m0e")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Coin" parent="ColorRect" instance=ExtResource("6_5v5ho")]
position = Vector2(18, 16)

[node name="StartScreen" parent="." instance=ExtResource("4_12a7g")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="coin_got" from="Player" to="." method="_on_coin_coin_got"]
[connection signal="start_stage" from="StartScreen" to="." method="_on_start_screen_start_stage"]
